--- a/src/main/resources/fxml/newDocument.fxml
+++ b/src/main/resources/fxml/newDocument.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="436.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.iasa.ui.NewDocumentController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="436.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.iasa.ui.controller.NewDocumentController">
    <children>
       <DatePicker fx:id="datePicker" layoutX="27.0" layoutY="53.0" prefHeight="25.0" prefWidth="200.0" />
       <Label layoutX="27.0" layoutY="22.0" prefHeight="25.0" prefWidth="174.0" text="Дата створення:" />
