--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -6,7 +6,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
       prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="ua.iasa.ui.LoginController">
+      fx:controller="ua.iasa.ui.controller.LoginController">
     <children>
         <TextField fx:id="loginField" layoutX="217.0" layoutY="187.0" promptText="login"/>
         <PasswordField fx:id="password" layoutX="217.0" layoutY="244.0" promptText="password"/>
