--- a/src/main/resources/fxml/moveGoods.fxml
+++ b/src/main/resources/fxml/moveGoods.fxml
@@ -8,8 +8,8 @@
    <children>
       <Label layoutX="18.0" layoutY="55.0" prefHeight="17.0" prefWidth="34.0" text="From" />
       <Label layoutX="18.0" layoutY="120.0" prefHeight="17.0" prefWidth="34.0" text="To" />
-      <ComboBox fx:id="FromRoomList" layoutX="85.0" layoutY="51.0" prefWidth="150.0" />
-      <ComboBox fx:id="ToRoomList" layoutX="84.0" layoutY="117.0" prefWidth="150.0" />
+      <ComboBox fx:id="fromRoomList" layoutX="85.0" layoutY="51.0" prefWidth="150.0" />
+      <ComboBox fx:id="toRoomList" layoutX="84.0" layoutY="117.0" prefWidth="150.0" />
       <Button fx:id="MoveGoodButton" layoutX="236.0" layoutY="180.0" mnemonicParsing="false" onAction="#moveGood" text="Move!" />
       <Label layoutX="261.0" layoutY="125.0" prefHeight="17.0" prefWidth="99.0" text="Кількість товару" />
       <Label layoutX="252.0" layoutY="55.0" prefHeight="17.0" prefWidth="174.0" text="Товар" />
